web/static/css/perform-test.sass
.questionText
  font-size: 16pt
  margin-bottom: 15px
  border-bottom: 1px solid #cdcdcd

.answerText
  text-align: left

#questionContainer
  width: 100%
  margin-bottom: 30px
  padding: 5%

.question
  display: inline-block
  vertical-align: middle
  width: 80%
  margin: 0 25px 0 25px
  padding: 20px
  height: auto

#slickContainer
  border-radius: 30px
  border: 1px solid black
  background-color: white
  width: 80%
  margin: 0 auto

.checkBoxes
  text-align: right

.slickNavButtonWrapper
  font-size: 0
  line-height: 0
  position: absolute
  top: 50%
  display: block
  width: 20px
  height: 20px
  padding: 0
  -webkit-transform: translate(0, -50%)
  -ms-transform: translate(0, -50%)
  transform: translate(0, -50%)
  cursor: pointer
  border: none
  outline: none

.slickLeft
  left: -25px

.slickRight
  right: -25px

